src/Labs/network-policies/pods-comm/frontend.yml
# frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  containers:
    - name: frontend
      image: busybox
      command: ["sh", "-c", "sleep 3600"]
