src/Labs/network-policies/pods-comm/backend.yml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  labels:
    app: backend
spec:
  containers:
    - name: backend
      image: busybox
      command: ["sh", "-c", "while true; do echo 'Hola desde backend'; sleep 5; done"]

---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
